# macroeconomics_data

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: lseg_examples.py
mains/: __init__.py  fetch_data.py  fetch_federal_reserve_data.py  fetch_greenbook_data.py  fetch_lseg_data.py
src/macroeconomic_data/: __init__.py
src/macroeconomic_data/aws/: bucket_manager.py  s3.py  secrets_manager.py
src/macroeconomic_data/config/: settings.py
src/macroeconomic_data/core/: __init__.py  llm_client.py
src/macroeconomic_data/fred/: __init__.py
src/macroeconomic_data/fred/core/: fred_client.py
src/macroeconomic_data/fred/services/: data_fetcher.py
src/macroeconomic_data/greenbook/: __init__.py
src/macroeconomic_data/greenbook/services/: data_fetcher.py
src/macroeconomic_data/greenbook/utils/: variable_mapper.py
src/macroeconomic_data/lseg/: __init__.py
src/macroeconomic_data/lseg/core/: __init__.py  client.py
src/macroeconomic_data/lseg/services/: __init__.py
src/macroeconomic_data/lseg/utils/: __init__.py
src/macroeconomic_data/mains/: fetch_lseg_data.py
src/macroeconomic_data/services/: __init__.py  series_matcher.py
src/macroeconomic_data/utils/: __init__.py  aws.py  logging.py
tests/: conftest.py  test_aws.py  test_groq.py
