[tool.poetry]
name = "macroeconomic_data"
version = "0.1.0"
description = "A tool to fetch FRED economic data using natural language queries"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fredapi = "^0.5.0"
python-dotenv = "^1.0.0"
boto3 = "^1.34.0"
pandas = "^2.1.0"
requests = "^2.31.0"
groq = "^0.13.1"
thefuzz = "^0.20.0"
pathlib = "^1.0.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
fetch-fred-data = "mains.fetch_federal_reserve_data:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
