[tool.poetry]
name = "macroeconomic_data"
version = "0.1.0"
description = "A tool for fetching and analyzing macroeconomic data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.0"
pandas = "^2.2.0"
fredapi = "^0.5.1"
boto3 = "1.34.34"
groq = "0.4.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
thefuzz = "^0.20.0"
pathlib = "^1.0.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
openpyxl = "^3.1.5"
scipy = "1.11.4"
eikon = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fetch-data = "mains.fetch_data:main"
fetch-fred-data = "mains.fetch_federal_reserve_data:main"
fetch-greenbook-data = "mains.fetch_greenbook_data:main"
fetch-lseg-data = "mains.fetch_lseg_data:main"
